# rusty-boilerplate

./: Cargo.toml
src/: main.rs  prelude.rs
src/utils/: args.rs  loger.rs  mod.rs
