[package]
name = "rusty-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1" # error handling
tokio = {version = "1.0", features = ["full"]} # async runtime

clap = {version = "4", features = ["cargo", "derive", "env"]} # CLI args parser

futures = "0.3" # Promise like library for async

# JSON libs
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# WEB framework
axum = "0.6"
# DB libs
sqlx = {version = "0.6", features = ["runtime-tokio-rustls", "postgres"]}
sqlb = "0.0.8"

# humanized timestamp
humantime = "2.1"
time = { version = "0.3", features = ["macros"] }
clia-local-offset = "0.1"

color-eyre = "0.6"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "local-time"] }
tracing-appender = { package = "clia-tracing-appender", version = "0.2" }
tracing-futures = "0.2"
tracing-log = "0.1"

[dev-dependencies]
anyhow = "1"

[profile.dev.package.backtrace]
opt-level = 3